Wed Jan 17 11:48:42 2001  Darrell Brunsch <brunsch@uci.edu>

        * bin/msvc_auto_compile.pl:

          Added PACE to the list of ACE directories so PACE is
          compiled in full auto builds.

Wed Jan 17 10:00:42 2001  Darrell Brunsch <brunsch@uci.edu>

        * ace/Handle_Ops.cpp: (handle_timed_open)

          Removed the use of ACE_NONBLOCK on Win32.  This use
          didn't function as expected, since ACE_NONBLOCK would
          be interpreted as O_WRONLY.  Also, the CreateFile API
          call doesn't support any nonblocking option, so 
          redefining ACE_NONBLOCK would not seem to fix anything.

          Thanks to Matthias Wittig <m.wittig@com-on.de> for reporting
          a problem report form about this.

        * bin/PerlACE/Process_Unix.pm:

          Fixed up the use of the RUNNING state, so wait and kill
          work properly.  Also made Kill automatically use waitpid
          (since I can't think of any time we'd kill without wanting to
          clean up the resources).

Wed Jan 17 07:44:29 2001  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

	* apps/Gateway/Gateway/Concrete_Connection_Handlers.cpp (send): Set errno to
	  EWOULDBLOCK if n < len so that the caller will initiate a
 	  handle_output()-driven reply.  Thanks to Klaus H. Wolf
 	  <hw@cyland.com> for reporting this.
  
	* ace/Log_Msg.h (ACE_Log_Msg): Clarified that only the current message 
	  is stored in TSS.  Thanks to Pierre Oberson
 	  <oberson@nagra-kudelski.ch> for pointing out the need for this
 	  clarification.

	* examples/Log_Msg/test_log_msg.cpp (main): Fixed the example by
	  adding ACE_Log_Msg::PROCESS so that the messages do not print
 	  out (which is the correct behavior for this test).  Thanks to
 	  Mike Curtis <mccurry@my-deja.com> for reporting this.

Tue Jan 16 15:28:22 2001  Carlos O'Ryan  <coryan@uci.edu>

        * netsvcs/lib/Server_Logging_Handler_T.cpp:
          The formal parameter names must match in the .h and .cpp file